[package]
name = "compilet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive"] }
jsonwebtoken = "8.3.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
sha256 = "1.1.3"
shadow-rs = "0.21.0"

[build-dependencies]
shadow-rs = "0.21.0"
