[package]
name = "compilet"
description = "Server that compiles Rust, C, and C++ into WebAssembly."
version = "0.1.4"
homepage = "https://github.com/wasm-oj/compilet"
repository = "https://github.com/wasm-oj/compilet"
keywords = ["wasm", "wasm-oj", "compiler"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
edition = "2021"
include = ["/src", "build.rs", "LICENSE"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "compilet"
path = "src/main.rs"

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio", "gzip"] }
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive", "string"] }
home = "0.5.5"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
sha256 = "1.1.3"

[build-dependencies]
vergen = { version = "8.1.3", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[features]
c = []
cpp = []
rs = []
default = ["c", "cpp", "rs"]
